fdo#56392 fix hyphenation of words with punctuation

Change-Id: I17e094fa93a7ba6a554f4bc2dfd353f718f1a500